Using Ubuntu Mono Regular font instead of monospace. css tweaks. All h? elements are to be considered interface, make non-selectable. Put correct padding that works on Firefox for Linux, which is our target.

--- a/site/htdocs/avanty/style/avanty.css
+++ b/site/htdocs/avanty/style/avanty.css
@@ -12,12 +12,12 @@ body.avanty {
 	background-color: white;
 }
 
-.avanty .label {
+.avanty .label, h1, h2, h3, h4, h5 {
     user-select: none;
     -webkit-user-select: none;
     -moz-user-select: none;
 }
 
 .numbers {
-	font-family: monospace !important;
+	font-family: 'Ubuntu Mono Regular' !important;
 }
